Dutch Translation edit
edited

--- a/res/values/strings - dutch.xml
+++ b/res/values/strings - dutch.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
     <string name="appname">Camera</string>
     <string name="hello">MaclawStudios Camera - Beta 1</string>
-    <string name="unsupported">Model niet ondersteund</string>
-    <string name="error">Er is iets fout gegaan!&#8230;</string>
+    <string name="unsupported">Model niet ondersteund!</string>
+    <string name="error">Er is iets fout gegaan</string>
 </resources>
